Add annotation in users controller for documentation
